Se agrego parcialmente el Router.

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,4 +4,6 @@ $font-general: "Roboto", sans-serif;
 * {
   font-family: $font-general;
   font-weight: 400;
+  margin-left: 0.2vh;
+  margin-right: 0.2vh;
 }
