--- a/src/pages/home/body.scss
+++ b/src/pages/home/body.scss
@@ -2,13 +2,19 @@
 
 $font-title: "Union Gray", sans-serif;
 
-main {
-  margin-left: 0.5vh;
-  margin-right: 0.5vh;
-  padding: 0.5vh;
-}
-
 h1 {
   font-family: $font-title;
   font-size: 1.5rem;
+}
+
+#landing {
+  background-image: url("../../assets/bg-landing.webp");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  object-fit: cover;
+  color: white;
+  padding: 0px;
+  margin: 0px;
+  width: 100%;
 }
