--- a/src/components/shop/filter/filter.scss
+++ b/src/components/shop/filter/filter.scss
@@ -3,6 +3,8 @@ aside {
   border: 1px solid;
   border-radius: 1vh;
   border-color: gainsboro;
+  margin-left: 10px;
+  margin-top: 10px;
 }
 
 .filter {
