Se actualizo el README.md, se avanzo con el styling y rutas.

--- a/src/pages/aboutUs/aboutUs.scss
+++ b/src/pages/aboutUs/aboutUs.scss
@@ -3,10 +3,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  margin: 10px;
-}
-
-#usText {
+  margin: auto 0;
 }
 
 #video {
