Colores y mas colores.

--- a/src/assets/_colors.scss
+++ b/src/assets/_colors.scss
@@ -1,3 +1,7 @@
 $highlights-color: #ef8354;
 $accents-color: #4f5d75;
 $details-color: #2d3142;
+
+$highlights-faded-color: #eba485;
+$accents-faded-color: #768091;
+$details-faded-color: #50525e;
