--- a/src/components/shop/items/ItemList/ItemDetail/ItemDetail.scss
+++ b/src/components/shop/items/ItemList/ItemDetail/ItemDetail.scss
@@ -10,5 +10,13 @@
   margin: 10px auto 10px auto;
 }
 
-.itemTitle {
+.itemPrice {
+  margin: 0;
+  font-size: x-large;
+}
+
+.counterPriceContainer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
