Update al contador.

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
-$font-general: "Roboto", sans-serif;
+@import "./assets/fonts";
 
 * {
   font-family: $font-general;
