--- a/src/assets/_colors.scss
+++ b/src/assets/_colors.scss
@@ -5,3 +5,5 @@ $details-color: #2d3142;
 $highlights-faded-color: #eba485;
 $accents-faded-color: #768091;
 $details-faded-color: #50525e;
+
+$background-hint-color: #e0e0e0;
