--- a/src/assets/_colors.scss
+++ b/src/assets/_colors.scss
@@ -6,4 +6,4 @@ $highlights-faded-color: #eba485;
 $accents-faded-color: #768091;
 $details-faded-color: #50525e;
 
-$background-hint-color: #e0e0e0;
+$background-hint-color: #bfc0c0;
