Se agrego la opcion de agregar al carrito luego de que seleccionamos una cantidad deseada de items.

--- a/src/components/shop/items/ItemCounter/ItemCounter.scss
+++ b/src/components/shop/items/ItemCounter/ItemCounter.scss
@@ -1,6 +1,11 @@
 @import "../../../../assets/colors";
 .counterContainer {
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.buttons {
+  display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
@@ -31,5 +36,13 @@ button {
   border-radius: 5px;
   &:hover {
     background-color: $highlights-faded-color;
+  }
+}
+
+.finishShopping {
+  color: white;
+  text-decoration: none;
+  &:hover {
+    color: white;
   }
 }
