--- a/src/components/shop/items/ItemList/Item.scss
+++ b/src/components/shop/items/ItemList/Item.scss
@@ -2,19 +2,18 @@ div.card {
   margin: 10px 5px 10px 5px;
   display: flex;
   flex-direction: row;
+  height: 10rem;
   img {
-    min-width: 150px;
-    min-height: 225px;
-    margin: auto;
-    margin-right: 10px;
+    width: 10rem;
+    height: auto;
   }
   .cardInfo {
     display: flex;
     flex-direction: column;
-    margin: auto;
+    margin-left: 1em;
+    justify-content: flex-start;
   }
   p {
-    max-height: 150px;
     overflow: hidden;
     margin: 0;
   }
