--- a/src/components/shop/items/ItemList/ItemDetail/ItemDetail.scss
+++ b/src/components/shop/items/ItemList/ItemDetail/ItemDetail.scss
@@ -60,7 +60,7 @@
   }
 }
 
-.goCart {
+button.goCart {
   color: black;
   text-decoration: none;
   border-radius: 1vh;
@@ -71,7 +71,15 @@
   margin: 10px auto 10px auto;
   text-align: center;
   background-color: $highlights-color;
+  width: 10em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   &:hover {
     color: white;
+  }
+  &:disabled {
+    background-color: rgb(216, 216, 216);
+    color: rgb(90, 90, 90);
   }
 }
