--- a/src/pages/cart/cart.scss
+++ b/src/pages/cart/cart.scss
@@ -1,5 +1,9 @@
 .cartPanel {
   display: block;
+  margin: 1em;
+  h1 {
+    text-align: center;
+  }
 }
 
 .noItems {
@@ -14,12 +18,41 @@
   width: auto;
 }
 
+.trash {
+  width: 1.5em;
+}
+
 .cartContainer {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  border: 2px black solid;
+  border-radius: 1em;
+  ul {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
 }
-.trashCan {
-  margin: 20px 0;
-  cursor: pointer;
+
+.totalAndButtonPosition {
+  display: flex;
+  justify-content: flex-end;
+  margin: 1em;
+}
+
+.totalAndButton {
+  display: flex;
+  flex-direction: row;
+  h2 {
+    margin-left: 0.5em;
+    margin-right: 0.5em;
+  }
+  button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 10em;
+  }
 }
