--- a/src/components/navBar/navBar.scss
+++ b/src/components/navBar/navBar.scss
@@ -7,6 +7,11 @@
   }
 }
 
+button.navbar-toggler {
+  padding: 0;
+  width: 5vh;
+}
+
 #basic-nav-dropdown {
   color: black;
   &:hover {
@@ -30,6 +35,7 @@ img {
     color: gray;
   }
 }
+
 .navBar {
   display: flex;
   flex-direction: row;
